# autoencodeSVJ

./: .gitignore
analysis/h5analysis/: CMakeLists.txt  Constituent.cpp  Constituent.hpp  Event.cpp  Event.hpp  EventProcessor.cpp  Helpers.hpp  Jet.cpp  Jet.hpp  compareHists.C  comparePtWeighted.C  h5parser.cpp  prepareHists.cpp
analysis/h5analysis/include/: Event.hpp  EventProcessor.hpp  Jet.hpp
analysis/h5analysis/src/: Constituent.cpp  Event.cpp  EventProcessor.cpp  Jet.cpp
bdt/: drawAUCtable.py  produceMissingAucs.py  train.py
bdt/trainingResults_noLeptonVeto_fatJets/: aucs.txt
bdt/trainingResults_no_MET_over_mt_cut/: aucs.txt
bdt/trainingResults_old/: aucs.txt
preselection/: SVJselection.cpp  runSelections.sh  runSelections.sub  runSelectionsQCD.sh  runSelectionsQCD.sub  runSelectionsQCDscoutingHLT.sh  slurmRun.sh
preselection/include/: Helpers.hpp  ParallelTreeChain.h  SVJFinder.hpp
preselection/inputFileLists/: input_file_list_m1500_mDark20_r30_alphaPeak.txt  input_file_list_m1500_mDark20_r50_alphaPeak.txt  input_file_list_m1500_mDark20_r70_alphaPeak.txt  input_file_list_m2000_mDark20_r70_alphaPeak.txt  input_file_list_m2000_r45.txt  input_file_list_m2500_mDark20_r30_alphaPeak.txt  input_file_list_m2500_mDark20_r50_alphaPeak.txt  input_file_list_m2500_mDark20_r70_alphaPeak.txt  input_file_list_m3000_mDark20_r50_alphaPeak.txt  input_file_list_m3000_mDark20_r70_alphaPeak.txt  input_file_list_m3500_mDark20_r30_alphaPeak.txt  input_file_list_m3500_r30.txt  input_file_list_m3500_r45.txt  input_file_list_m4000_mDark20_r30_alphaPeak.txt  input_file_list_m4000_mDark20_r70_alphaPeak.txt
preselection/results/: mergeQCD.sh  output_file_name
preselection/src/: ParallelTreeChain.cpp  SVJFinder.cpp
rootToH5converter/: Converter.py  DataProcessor.py  Event.py  Jet.py  PhysObject.py  rootToH5.py  runConversion.sh  runConversion.sub  runConversionQCD.sh  runConversionSVJ.sh  runParallelLxplus.sh  runParallelLxplusQCD.sh  setup.sh  slurmRun.sh
rootToH5converter/selections/: data_0_selection.txt  qcd_pt1000to1400_cmssw_fromFlorian.txt  qcd_pt1400to1800_cmssw_fromFlorian.txt  qcd_pt1800to2400_cmssw_fromFlorian.txt  qcd_pt2400to3200_cmssw_fromFlorian.txt  (+6 more)
training/: drawAUCtable.py  drawROCcurves.py  drawReconstructedVariables.py  drawReconstructedVariables_new.py  drawReconstructionLoss.py  drawReconstructionLossVsScaler.py  prepareBdtAucs.sh  printWeights.py  produceMissingAucs.py  produceMtPlots.py  runAllBdts.sh  runAnalysis.py  runParallelLxplusBDTs.sh  train.py  trainBdt.py  trainingResults
weighting/: compareWeightedDists.C  produceWeightsHist.C  setenv.sh
(+11309 files in other folders)
